<resources>
    <!-- recycler_view_exercise -->
    <string name="app_name">RecyclerViewExercise</string>
    <string name="date_and_time">展示时间日期</string>
    <string name="show_date">显示当前日期</string>
    <string name="show_time">显示当前时间</string>
    <!--transmit_data,start_activity_for_result -->
    <string name="intent_data">使用Intent传递数据</string>
    <string name="static_data">使用静态变量传值</string>
    <string name="clipboard_data">使用剪切板传值</string>
    <string name="application_data">使用全局对象传值</string>
    <!--start_system_activity-->
    <string name="action_call">直接拨号</string>
    <string name="action_dial">将电话号传入拨号程序</string>
    <string name="action_touch_dialer">调用拨号程序</string>
    <string name="action_view">浏览网页</string>
    <string name="action_list_contacts">查看联系人</string>
    <string name="settings">显示系统设置界面</string>
    <string name="wifi_settings">显示wifi设置界面</string>
    <string name="audio">启动处理音频的程序</string>
    <string name="home">回到home窗口（相当于按home键）</string>
    <!--invoke_other_activity-->
    <string name="web_action">浏览网页：Action</string>
    <string name="web_set_class_name">浏览网页：setClassName</string>
    <string name="web_set_class_name_context">浏览网页：setClassName_Context</string>
    <string name="web_set_class">浏览网页：setClass</string>
    <string name="web_set_component_name">浏览网页：setComponentName</string>
    <string name="calculator">显示计算器</string>
    <!--FilterConsumer-->
    <string name="filter1">Filter1</string>
    <string name="filter2">Filter2</string>
    <string name="filter3">Filter3</string>
    <string name="filter4">Filter4</string>
    <string name="filter5">Filter5</string>
    <string name="filter6">Filter6</string>

    <!--ScreenOrientation-->
    <string name="four_screen_orientation">4个屏幕旋转方向</string>
    <string name="landscape">横屏</string>
    <string name="portrait">竖屏</string>

    <!--ConfigChanges-->
    <string name="setting_var">设置变量值</string>

    <!--ProcessActivity-->
    <string name="create_new_process">创建新进程</string>
    <string name="use_old_process">使用当前应用程序的进程</string>

    <!--SaveState-->
    <string name="set_value">设置value字段的值</string>
    <string name="output_value">输出value的值</string>
    <!--LaunchMode-->
    <string name="standard">standard</string>
    <string name="singleTop">singleTop</string>
    <string name="test_activity">TestActivity</string>
    <string name="single">single</string>
    <string name="test1">跳转到Test1Activity</string>
    <string name="test2">跳转到Test2Activity</string>
    <!--IntentFlag-->
    <string name="show_self">显示IntentFlagActivity（singleTop）</string>
    <string name="show_my_activity">显示MyActivity</string>
    <string name="show_other_activity_standard">显示其他程序的活动（standard）</string>
    <string name="show_other_activity_single_task">显示其他程序的活动（singleTask）</string>
    <string name="close_all_my_activity">关闭所有MyActivity活动</string>
    <!--AffinityActivity-->
    <string name="task_affinity">taskAffinity</string>
    <!--LinearLayout-->
    <string name="btn1">按钮1</string>
    <string name="btn2">按钮2</string>
    <string name="btn3">按钮3</string>
    <string name="btn_left_top">左上按钮</string>
    <string name="btn_right_top">右上按钮</string>
    <string name="btn_left_bottom">左下按钮</string>
    <string name="btn_right_bottom">右下按钮</string>
    <string name="btn_center">中心按钮</string>
    <!--Menu-->
    <string name="btn_menu">绑定上下文菜单按钮</string>
    <string name="tv_menu">绑定上下文菜单标签</string>
    <string name="et_menu">长按出现上下文菜单</string>
    <string name="home_page">首页</string>
    <string name="my">我的</string>
    <string name="more">更多</string>
    <!--Resoureces-->
    <string name="btn_get_resource_id">根据资源名称获取资源id</string>
    <string name="btn_flower">花</string>
    <string name="btn_leaf">叶子</string>
    <string name="btn_meizi_to_dragon">妹子变龙</string>
    <string name="btn_dragon_to_meizi">龙变妹子</string>
    <string name="btn_move">move me</string>
    <string name="btn_move_me">我动了啊</string>
    <string name="et_moving">移动的我</string>
    <string name="btn_begin_anim">开始动画</string>
    <string name="btn_shake">振动</string>
    <!--控件练习-->
    <string name="btn_insert_faces">随机插入表情</string>
    <string name="btn_confirm">确认</string>
    <string name="checked_textView">checkedTextView</string>
    <string name="radio_button">RadioButton</string>
    <string name="checkbox">checkBox</string>
    <string name="add_text">添加文本</string>
    <string name="add_image">添加图像</string>
    <string name="delete_item">删除当前项</string>
    <string name="random_change_item">随机修改当前项</string>
    <string name="clear_item">清空</string>
    <string name="default_color">默认颜色</string>
    <string name="green">绿色</string>
    <string name="yellow">黄色</string>
    <string name="change_tag">切换到第三个标签</string>
</resources>
