<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_call"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_call"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_dial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_dial"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_touch_dialer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_touch_dialer"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_view"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_contacts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_list_contacts"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_wifi_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wifi_settings"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_audio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/audio"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home"
            android:textSize="20sp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
