<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_center"
        android:layout_centerInParent="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_left_top"
        android:layout_above="@+id/btn_center"
        android:layout_toLeftOf="@+id/btn_center" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_right_top"
        android:layout_above="@+id/btn_center"
        android:layout_toRightOf="@+id/btn_center" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_left_bottom"
        android:layout_below="@+id/btn_center"
        android:layout_toLeftOf="@+id/btn_center" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_right_bottom"
        android:layout_below="@+id/btn_center"
        android:layout_toRightOf="@+id/btn_center" />

</RelativeLayout>
