<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_self"
        android:textSize="20sp"
        android:onClick="clickBtnShowSelf"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/show_my_activity"
        android:onClick="clickBtnMyActivity"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_other_activity_single_task"
        android:textSize="20sp"
        android:onClick="clickBtnSingleTask"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_other_activity_standard"
        android:textSize="20sp"
        android:onClick="clickBtnStandard2" />

</LinearLayout>
