<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn_add_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/add_text"/>
        <Button
            android:id="@+id/btn_add_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/btn_add_text"
            android:layout_marginLeft="10dp"
            android:textSize="20sp"
            android:text="@string/add_image"/>
        <Button
            android:id="@+id/btn_remove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/btn_add_image"
            android:layout_marginLeft="10dp"
            android:textSize="20sp"
            android:text="@string/delete_item"/>
        <Button
            android:id="@+id/btn_modify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_add_text"
            android:textSize="20sp"
            android:text="@string/random_change_item"/>
        <Button
            android:id="@+id/btn_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/btn_modify"
            android:layout_alignBottom="@+id/btn_modify"
            android:layout_marginLeft="10dp"
            android:textSize="20sp"
            android:text="@string/clear_item"/>
    </RelativeLayout>

    <ListView
        android:id="@+id/lv_dynamic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
