<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_menu"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/tv_menu"
        android:textAlignment="center"
        android:background="#0af"/>

    <EditText
        android:id="@+id/et_menu"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:hint="@string/et_menu"/>
</LinearLayout>
