<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <RadioButton
        android:id="@+id/rb_default"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_color"/>

    <RadioButton
        android:id="@+id/rb_green"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/green"/>

    <RadioButton
        android:id="@+id/rb_yellow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yellow"/>
    </RadioGroup>
    <ListView
        android:id="@+id/lv_color"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
