<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checked_textView"
        android:gravity="center_horizontal"
        android:textSize="20sp" />
    <ListView
        android:id="@+id/lv_checked_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/radio_button"
        android:gravity="center_horizontal"
        android:textSize="20sp" />
    <ListView
        android:id="@+id/lv_radio_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkbox"
        android:gravity="center_horizontal"
        android:textSize="20sp" />
    <ListView
        android:id="@+id/lv_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
